fix: changed h2 (large-heading) and few styles on tablet and mobile devices

--- a/assets/styles/components/_HeroHeadlineBanner.scss
+++ b/assets/styles/components/_HeroHeadlineBanner.scss
@@ -64,6 +64,10 @@
 
 			&__cta {
 
+				@media (max-width: $breakpoint-tablet) {
+					text-align: center;
+				}
+
 				.Buttons {
 					display: flex;
 					flex-wrap: wrap;
